// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Japanese Film Club Phoenix Cinema retrieve and find events 1`] = `
[
  {
    "category": "event",
    "overview": {
      "actors": [],
      "categories": [],
      "directors": [
        "Suo Masayuki",
      ],
      "duration": 8220000,
      "year": "1996",
    },
    "performances": [
      {
        "accessibility": {
          "subtitled": true,
        },
        "bookingUrl": "https://japanesefilm.club/seat-select/?scr_film=2720&scr_id=6a4bb35190b1b",
        "format": {},
        "notes": "",
        "status": {},
        "time": 1789228800000,
      },
    ],
    "showingId": "japanesefilm.club-shall-we-dance",
    "title": "Shall We Dance? – 4K Restoration",
    "url": "https://japanesefilm.club/shall-we-dance/",
  },
]
`;

exports[`Japanese Film Club Rio Cinema retrieve and find events 1`] = `
[
  {
    "category": "event",
    "overview": {
      "actors": [],
      "categories": [],
      "directors": [
        "Masaaki Yuasa",
      ],
      "duration": 6000000,
      "year": "2017",
    },
    "performances": [
      {
        "accessibility": {
          "subtitled": true,
        },
        "bookingUrl": "https://japanesefilm.club/seat-select/?scr_film=5831&scr_id=6a4bb4e4461de",
        "format": {},
        "notes": "",
        "status": {},
        "time": 1788021900000,
      },
    ],
    "showingId": "japanesefilm.club-the-night-is-short-walk-on-girl",
    "title": "The Night Is Short, Walk On Girl",
    "url": "https://japanesefilm.club/the-night-is-short-walk-on-girl/",
  },
]
`;
